RawMaterial Update to accomdate RawMaterialProduct and Heat